; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_drm_egl.c_drm_egl_submit_frame.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_drm_egl.c_drm_egl_submit_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_swapchain = type { %struct.ra_ctx* }
%struct.ra_ctx = type { %struct.priv* }
%struct.priv = type { i32 }
%struct.vo_frame = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ra_swapchain*, %struct.vo_frame*)* @drm_egl_submit_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drm_egl_submit_frame(%struct.ra_swapchain* %0, %struct.vo_frame* %1) #0 {
  %3 = alloca %struct.ra_swapchain*, align 8
  %4 = alloca %struct.vo_frame*, align 8
  %5 = alloca %struct.ra_ctx*, align 8
  %6 = alloca %struct.priv*, align 8
  store %struct.ra_swapchain* %0, %struct.ra_swapchain** %3, align 8
  store %struct.vo_frame* %1, %struct.vo_frame** %4, align 8
  %7 = load %struct.ra_swapchain*, %struct.ra_swapchain** %3, align 8
  %8 = getelementptr inbounds %struct.ra_swapchain, %struct.ra_swapchain* %7, i32 0, i32 0
  %9 = load %struct.ra_ctx*, %struct.ra_ctx** %8, align 8
  store %struct.ra_ctx* %9, %struct.ra_ctx** %5, align 8
  %10 = load %struct.ra_ctx*, %struct.ra_ctx** %5, align 8
  %11 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %10, i32 0, i32 0
  %12 = load %struct.priv*, %struct.priv** %11, align 8
  store %struct.priv* %12, %struct.priv** %6, align 8
  %13 = load %struct.vo_frame*, %struct.vo_frame** %4, align 8
  %14 = getelementptr inbounds %struct.vo_frame, %struct.vo_frame* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.priv*, %struct.priv** %6, align 8
  %17 = getelementptr inbounds %struct.priv, %struct.priv* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.ra_swapchain*, %struct.ra_swapchain** %3, align 8
  %19 = load %struct.vo_frame*, %struct.vo_frame** %4, align 8
  %20 = call i32 @ra_gl_ctx_submit_frame(%struct.ra_swapchain* %18, %struct.vo_frame* %19)
  ret i32 %20
}

declare dso_local i32 @ra_gl_ctx_submit_frame(%struct.ra_swapchain*, %struct.vo_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
